@@ -1,11 +1,13 @@
 package com.softjourn.coin.server.service;
 
+import com.fasterxml.jackson.databind.cfg.CoercionAction;
+import com.fasterxml.jackson.databind.cfg.CoercionInputShape;
+import com.fasterxml.jackson.databind.type.LogicalType;
 import com.softjourn.coin.server.dto.EnrollResponseDTO;
 import com.softjourn.coin.server.entity.enums.Chaincode;
 import com.softjourn.coin.server.exceptions.AccountEnrollException;
 import com.softjourn.coin.server.exceptions.FabricRequestInvokeException;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
@@ -17,8 +19,10 @@ import org.springframework.http.HttpHeaders;
 import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
 import org.springframework.http.converter.HttpMessageConverter;
+import org.springframework.http.converter.json.Jackson2ObjectMapperBuilder;
 import org.springframework.http.converter.json.MappingJackson2HttpMessageConverter;
 import org.springframework.stereotype.Service;
+import org.springframework.web.client.RestClientException;
 import org.springframework.web.client.RestTemplate;
 
 @Service
@@ -32,15 +36,17 @@ public class FabricServiceImpl implements FabricService {
   @Autowired
   public FabricServiceImpl(
       @Value("${node.fabric.client}") String url, @Value("${org.name}") String organization,
-      RestTemplate template
+      RestTemplate template,
+      Jackson2ObjectMapperBuilder builder
   ) {
     this.url = url;
     this.organization = organization;
     this.template = template;
 
     List<HttpMessageConverter<?>> messageConverters = new ArrayList<>();
-    MappingJackson2HttpMessageConverter converter = new MappingJackson2HttpMessageConverter();
-    converter.setSupportedMediaTypes(Arrays.asList(MediaType.APPLICATION_JSON, MediaType.APPLICATION_JSON_UTF8));
+    builder.postConfigurer(objectMapper -> objectMapper.coercionConfigFor(LogicalType.Collection).setCoercion(CoercionInputShape.EmptyString, CoercionAction.AsEmpty));
+    MappingJackson2HttpMessageConverter converter = new MappingJackson2HttpMessageConverter(builder.build());
+    converter.setSupportedMediaTypes(List.of(MediaType.APPLICATION_JSON));
     messageConverters.add(converter);
     template.setMessageConverters(messageConverters);
   }
@@ -54,24 +60,27 @@ public class FabricServiceImpl implements FabricService {
     request.put("username", email);
     request.put("orgName", organization);
 
-    HttpEntity<?> httpEntity = new HttpEntity<Object>(request, headers);
+    HttpEntity<?> httpEntity = new HttpEntity<>(request, headers);
     try {
       return template.postForEntity(this.url + "enroll", httpEntity, EnrollResponseDTO.class);
-    } catch (Exception e) {
+    } catch (RestClientException e) {
       throw new AccountEnrollException(e);
     }
   }
 
   @Override
   public <T> T invoke(String email, String function, Object args, Class<T> responseType) {
-    EnrollResponseDTO body = this.enroll(email).getBody();
-
-    HttpEntity<?> httpEntity = getHttpEntity(function, args, body);
-
-    try {
-      return template.postForEntity(this.url + "invoke", httpEntity, responseType).getBody();
-    } catch (Exception e) {
-      throw new FabricRequestInvokeException(e);
+    ResponseEntity<EnrollResponseDTO> response = this.enroll(email);
+    if (response != null) {
+      EnrollResponseDTO body = response.getBody();
+      HttpEntity<?> httpEntity = getHttpEntity(function, args, body);
+      try {
+        return template.postForEntity(this.url + "invoke", httpEntity, responseType).getBody();
+      } catch (Exception e) {
+        throw new FabricRequestInvokeException(e);
+      }
+    } else {
+      return null;
     }
   }
 
@@ -94,16 +103,18 @@ public class FabricServiceImpl implements FabricService {
 
   @Override
   public <T> T query(String email, String function, Object args, Class<T> responseType) {
-    EnrollResponseDTO body = this.enroll(email).getBody();
-
-    HttpEntity<?> httpEntity = getHttpEntity(function, args, body);
-
-    try {
-      return template.postForEntity(this.url + "query", httpEntity, responseType).getBody();
-    } catch (Exception e) {
-      throw new FabricRequestInvokeException(e);
+    ResponseEntity<EnrollResponseDTO> response = this.enroll(email);
+    if (response != null) {
+      EnrollResponseDTO body = response.getBody();
+      HttpEntity<?> httpEntity = getHttpEntity(function, args, body);
+      try {
+        return template.postForEntity(this.url + "query", httpEntity, responseType).getBody();
+      } catch (Exception e) {
+        throw new FabricRequestInvokeException(e);
+      }
     }
-  }
+    return null;
+}
 
   @Override
   public <T> T query(
@@ -132,8 +143,8 @@ public class FabricServiceImpl implements FabricService {
 
     HttpHeaders headers = new HttpHeaders();
     headers.setAccept(Collections.singletonList(MediaType.APPLICATION_JSON));
-    headers.add("Authorization", "Bearer " + body.getToken());
+    headers.add("Authorization", "Bearer " + (body != null ? body.getToken(): ""));
 
-    return new HttpEntity<Object>(request, headers);
+    return new HttpEntity<>(request, headers);
   }
 }
